--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ requests
 aiohttp
 aiofiles
 aria2p
-git+https://github.com/Hrishi2861/pyrofork-2.2.11-peer-fix.git
+pyrofork
 python-dotenv
 gunicorn
 gevent
