--- a/config.env
+++ b/config.env
@@ -1,6 +1,7 @@
 #All Variables Are Required
-BOT_TOKEN = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-FSUB_ID = ""
-DUMP_CHAT_ID = ""
+BOT_TOKEN = "7499704303:AAFHys5pYUrjmQAYvHY1qIMVGQgbDgOC7ZQ"
+TELEGRAM_API = "23241238"
+TELEGRAM_HASH = "e6ff6e3068dbea75500865ac49c3608f"
+FSUB_ID = "-1002465106758"
+DUMP_CHAT_ID = "-1002514513728"
+OWNER_ID = "7716048556"
